--- a/src/alfred/config/database.yml
+++ b/src/alfred/config/database.yml
@@ -5,21 +5,33 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: alfred_development
+  host: localhost
+  port: 5432
+  pool: 5
+  username: postgres
+  password: pis2015rules
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: alfred_test
+  host: localhost
+  port: 5432
+  pool: 5
+  username: postgres
+  password: pis2015rules
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: alfred_production
+  username: alfred
+  password: <%= ENV['ALFRED_DATABASE_PASSWORD'] %>
