--- a/src/alfred/Gemfile
+++ b/src/alfred/Gemfile
@@ -7,6 +7,10 @@ gem 'rails', '4.2.1'
 gem 'sqlite3'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
+# Compass
+gem 'compass-rails', '~>2.0.5'
+# Bootstrap
+gem 'bootstrap-sass', '~> 3.3.5'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
