--- a/src/alfred/Gemfile
+++ b/src/alfred/Gemfile
@@ -1,5 +1,7 @@
 source 'https://rubygems.org'
 
+# Gema para la autenticación con google
+gem "omniauth-google-oauth2", "~> 0.2.1"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.1'
