--- a/src/alfred/config/database.yml
+++ b/src/alfred/config/database.yml
@@ -16,7 +16,7 @@ development:
   port: 5432
   pool: 5
   username: postgres
-  password: pis2015rules
+  password: 123
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -28,7 +28,7 @@ test:
   port: 5432
   pool: 5
   username: postgres
-  password: pis2015rules
+  password: 123
 
 production:
   <<: *default
