--- a/src/alfred/config/database.yml
+++ b/src/alfred/config/database.yml
@@ -12,11 +12,11 @@ default: &default
 development:
   <<: *default
   database: alfred_development
-  host: localhost
+  host: 190.64.137.59
   port: 5432
   pool: 5
   username: postgres
-  password: pis2015rules
+  password: fingpis2015
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -24,11 +24,11 @@ development:
 test:
   <<: *default
   database: alfred_test
-  host: localhost
+  host: 190.64.137.59
   port: 5432
   pool: 5
   username: postgres
-  password: pis2015rules
+  password: fingpis2015
 
 production:
   <<: *default
