--- a/src/alfred/Gemfile
+++ b/src/alfred/Gemfile
@@ -3,6 +3,10 @@ source 'https://rubygems.org'
 # Gema para la autenticación con google
 gem "omniauth-google-oauth2", "~> 0.2.1"
 
+# RSpec y Cocoverage
+gem 'simplecov'
+gem 'rspec-rails'
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.1'
 # Use sqlite3 as the database for Active Record
