--- a/src/alfred/Gemfile
+++ b/src/alfred/Gemfile
@@ -4,9 +4,7 @@ source 'https://rubygems.org'
 gem "omniauth-google-oauth2", "~> 0.2.1"
 gem 'capybara'
 
-# RSpec y Cocoverage
-gem 'simplecov'
-gem 'rspec-rails'
+
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.1'
@@ -55,8 +53,11 @@ group :development, :test do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 
+  # RSpec y Cocoverage
   gem 'simplecov'
-
   gem 'rspec-rails'
+
+  # Annotate
+  gem 'annotate'
 end
 
