Pull request corregido, falta Sacar la carpeta .idea, y el archivo database.yml

--- a/src/alfred/Gemfile
+++ b/src/alfred/Gemfile
@@ -1,10 +1,13 @@
 source 'https://rubygems.org'
 
+group :production do
+  gem 'rails_12factor' #necesario para Heroku
+end
+ruby "2.2.2" #especifica la versión de ruby a usar en Heroku.
+
 # Gema para la autenticación con google
 gem "omniauth-google-oauth2", "~> 0.2.1"
 gem 'capybara'
-
-
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.1'
