travis database yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
   - 2.2.2
 
 before_script:
-  - cp config/database.yml.travis config/database.sample.yml
+  - cp config/database.travis.yml config/database.sample.yml
 
 install: bundle install
 
