--- a/config/database.sample.yml
+++ b/config/database.sample.yml
@@ -34,7 +34,7 @@ test:
 production:
   <<: *default
     database: alfred_production
-    host: localhost
+    host: 192.168.1.202
     port: 5432
     pool: 5
     username: postgres
