--- a/config/database.yml
+++ b/config/database.yml
@@ -33,7 +33,7 @@ test:
 #configuración para Heroku
 production:
   <<: *default
-  database: alfred_development
+  database: alfred
   host: localhost
   port: 5432
   pool: 5
